--- a/source/index.html
+++ b/source/index.html
@@ -424,7 +424,8 @@
           <div class="faq__tab-pane faq__tab-pane--active" id="tab1">
             <div class="faq__tab-item faq__tab-item--active">
               <h3>Как стать членом фитнес-центра?</h3>
-              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на вопрос</span></button>
+              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+                  вопрос</span></button>
               <p>При первом посещении и покупке абонемента, необходимо заполнить анкету и подписать договор. При покупке
                 абонемента онлайн, анкета также заполняется онлайн и договор придёт вам на почту.
               </p>
@@ -432,7 +433,8 @@
 
             <div class="faq__tab-item">
               <h3>Где можно посмотреть расписание?</h3>
-              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на вопрос</span></button>
+              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+                  вопрос</span></button>
               <p>Вы можете ознакомиться с расписание на стойке информации, на нашем официальном
                 сайте. Так же есть возможность оформить подписку на наши новости и получать расписание и обновления на
                 почту каждую неделю.
@@ -441,7 +443,8 @@
 
             <div class="faq__tab-item">
               <h3>Есть кулеры в центре? Предоставляются полотенца?</h3>
-              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на вопрос</span></button>
+              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+                  вопрос</span></button>
               <p>В центре есть несколько кулеров. Полотенца предоставляются и входят в стоимость
                 абонемента.
               </p>
@@ -449,7 +452,8 @@
 
             <div class="faq__tab-item">
               <h3>Сколько тренеров работает в клубе и какова их квалификация?</h3>
-              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на вопрос</span></button>
+              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+                  вопрос</span></button>
               <p>В нашем центре работает 15 тренеров, которые специализируются на разных направлениях. Все тренеры
                 сертифицированы, проходят регулярное обучение.</p>
             </div>
@@ -458,7 +462,8 @@
           <div class="faq__tab-pane" id="tab2">
             <div class="faq__tab-item faq__tab-item--active">
               <h3>Занятия с тренером входят в абонемент?</h3>
-              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на вопрос</span></button>
+              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+                  вопрос</span></button>
               <p>При посещении тренажерного зала вам необходимо оплатить занятия с тренером
                 отдельно.
                 В зале всегда присутствует дежурный тренер, которому можно задать вопрос, получить небольшую
@@ -468,19 +473,22 @@
 
             <div class="faq__tab-item">
               <h3>Можно ли заморозить абонемент?</h3>
-              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на вопрос</span></button>
+              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+                  вопрос</span></button>
               <p>Да, опция заморозки доступна и зависит от типа приоретенного абонемента.</p>
             </div>
 
             <div class="faq__tab-item">
               <h3>Есть ли лимит по посещениям тренажерного зала и групповых занятий?</h3>
-              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на вопрос</span></button>
+              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+                  вопрос</span></button>
               <p>Лимит отсутствует. Занимайтесь на здоровье!</p>
             </div>
 
             <div class="faq__tab-item">
               <h3>Что такое семейный доступ и доступ для друзей?</h3>
-              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на вопрос</span></button>
+              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+                  вопрос</span></button>
               <p>ааааа</p>
             </div>
           </div>
@@ -488,27 +496,31 @@
           <div class="faq__tab-pane" id="tab3">
             <div class="faq__tab-item faq__tab-item--active">
               <h3>Предлагает ли клуб услуги по консультированию по вопросам питания?</h3>
-              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на вопрос</span></button>
+              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+                  вопрос</span></button>
               <p>Да. Вы можете обратиться как к своему тренеру, так и к нашему нутрициологу.
                 Специалист уточнит ваши данные, цели и предложит программу питания.</p>
             </div>
 
             <div class="faq__tab-item">
               <h3>Проводятся ли в клубе какие-либо мероприятия  или соревнования?</h3>
-                <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на вопрос</span></button>
+              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+                  вопрос</span></button>
               <p>Да. Вся информация доступна на сайте, также можно узнать о проводимых мероприятиях у менеджера при
                 входе в фитнес-зал.</p>
             </div>
 
             <div class="faq__tab-item">
               <h3>Можно ли приобрести в центре спортивное питание?</h3>
-              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на вопрос</span></button>
+              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+                  вопрос</span></button>
               <p>Да. В Центре работает магазин спортивного питания. Находится на 1 этаже при входе.</p>
             </div>
 
             <div class="faq__tab-item">
               <h3>Есть ли в центре детская комната?</h3>
-              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на вопрос</span></button>
+              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+                  вопрос</span></button>
               <p>Да.</p>
             </div>
           </div>
@@ -516,7 +528,8 @@
           <div class="faq__tab-pane" id="tab4">
             <div class="faq__tab-item faq__tab-item--active">
               <h3>Есть в фитнес-центре дресс-код?</h3>
-              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на вопрос</span></button>
+              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+                  вопрос</span></button>
               <p>Для тренировок необходимо иметь предназначенную для этого закрытую спортивную обувь
                 и
                 одежду. Верхняя и нижняя части тела должны быть закрыты (используйте футболки, майки, спортивные брюки,
@@ -526,19 +539,22 @@
 
             <div class="faq__tab-item">
               <h3>Можно ли приводить с собой детей на тренировки?</h3>
-              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на вопрос</span></button>
+              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+                  вопрос</span></button>
               <p>Можно приводить детей только на специальные занятия, которые проводятся совместно с детьми.</p>
             </div>
 
             <div class="faq__tab-item">
               <h3>Какие дополнительные правила посещения центра?</h3>
-              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на вопрос</span></button>
+              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+                  вопрос</span></button>
               <p>аллал</p>
             </div>
 
             <div class="faq__tab-item">
               <h3>Нужна ли медицинская справка для посещения залов и бассейна?</h3>
-              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на вопрос</span></button>
+              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+                  вопрос</span></button>
               <p>Для посещения зала справка не нужна, а для посещения бассейна - обязательна.</p>
             </div>
           </div>
@@ -549,32 +565,59 @@
 
     <section class="reviews" data-test="reviews">
       <h2 class="reviews__title">Отзывы</h2>
-      <div class="reviews__slider-container">
-        <div class="reviews__slider">
-          <ul>
-            <li class="reviews__card">
-              <h3>Анна Орлова</h3>
-              <blockquote>«Хожу в Supergym уже больше года. Нравится, что в клубе всегда чисто,
-                тренажёры обновляют,
-                персонал дружелюбный. Зал просторный, даже в вечернее время нет очередей»</blockquote>
-            </li>
-            <li class="reviews__card">
-              <h3>Олег Попов</h3>
-              <blockquote>«Хожу в Supergym больше 6 лет, всегда чистые раздевалки, просторный зал,
-                нет толкучки, удобная локация. Я доволен!»</blockquote>
-            </li>
-            <li class="reviews__title">
-              <h3>Артем Алексеев</h3>
-              <blockquote>«Нравится спортзал, всегда проходят интересные мероприятия, в которых я
-                люблю поучаствовать. Лучший зал, в который я ходил»</blockquote>
-            </li>
-          </ul>
-        </div>
+      <div class="reviews__swiper swiper">
+        <div class="reviews__swiper-wrapper swiper-wrapper">
+          <div class="reviews__card swiper-slide">
+            <div>
+              <picture>
+                <source width="490" height="682" type="image/webp"
+                  srcset="img/reviews/anna-orlova-avatar@1x.webp 1x, img/reviews/anna-orlova-avatar@1x.webp 2x">
 
-        <button class="reviews__prev-button" type="button" aria-label="Посмотреть предыдущий слайд"><span
-            class="visually-hidden">Назад</span></button>
-        <button class="reviews__next-button" type="button" aria-label="Посмотреть следующий слайд"><span
-            class="visually-hidden">Вперед</span></button>
+                <img src="img/reviews/anna-orlova-avatar@1x.jpg" width="490" height="682"
+                  srcset="img/reviews/anna-orlova-avatar@2x.jpg" alt="Аватар Анны Орловой">
+              </picture>
+            </div>
+            <h3>Анна Орлова</h3>
+            <blockquote>«Хожу в Supergym уже больше года. Нравится, что в клубе всегда чисто,
+              тренажёры обновляют,
+              персонал дружелюбный. Зал просторный, даже в вечернее время нет очередей»</blockquote>
+        </div>
+          <div class="reviews__card swiper-slide">
+            <div>
+              <picture>
+                <source width="490" height="682" type="image/webp"
+                  srcset="img/reviews/anna-orlova-avatar@1x.webp 1x, img/reviews/anna-orlova-avatar@1x.webp 2x">
+
+                <img src="img/reviews/anna-orlova-avatar@1x.jpg" width="490" height="682"
+                  srcset="img/reviews/anna-orlova-avatar@2x.jpg" alt="Аватар Анны Орловой">
+              </picture>
+            </div>
+            <h3>Олег Попов</h3>
+            <blockquote>«Хожу в Supergym больше 6 лет, всегда чистые раздевалки, просторный зал,
+              нет толкучки, удобная локация. Я доволен!»</blockquote>
+          </div>
+          <div class="reviews__card swiper-slide">
+            <div>
+              <picture>
+                <source width="490" height="682" type="image/webp"
+                  srcset="img/reviews/anna-orlova-avatar@1x.webp 1x, img/reviews/anna-orlova-avatar@1x.webp 2x">
+
+                <img src="img/reviews/anna-orlova-avatar@1x.jpg" width="490" height="682"
+                  srcset="img/reviews/anna-orlova-avatar@2x.jpg" alt="Аватар Анны Орловой">
+              </picture>
+            </div>
+            <h3>Артем Алексеев</h3>
+            <blockquote>«Нравится спортзал, всегда проходят интересные мероприятия, в которых я
+              люблю поучаствовать. Лучший зал, в который я ходил»</blockquote>
+          </div>
+        </div>
+      </div>
+
+      <div class="reviews__buttons-container">
+        <button class="reviews__button reviews__button--prev swiper-button-prev" type="button" aria-label="Посмотреть предыдущий слайд">
+          <span class="visually-hidden">Назад</span></button>
+        <button class="reviews__button reviews__button--next swiper-button-next" type="button"
+          aria-label="Посмотреть следующий слайд"><span class="visually-hidden">Вперед</span></button>
       </div>
     </section>
 
