feat: add footer block styles (mobile, tablet, desktop)

--- a/source/index.html
+++ b/source/index.html
@@ -664,6 +664,7 @@
   </main>
 
   <footer class="footer" data-test="footer">
+    <div class="footer__main-container">
     <picture>
       <source media="(min-width: 1366px)" width="130" height="26" type="image/svg+xml"
         srcset="img/logo/supergym-logo-desktop.svg">
@@ -705,6 +706,7 @@
             class="visually-hidden">Мы в Reddit</span></a>
       </li>
     </ul>
+  </div>
   </footer>
 
   <script src="js/vendor/swiper-bundle.js"></script>
