feat: add link states in offers block

--- a/source/index.html
+++ b/source/index.html
@@ -374,7 +374,7 @@
         <div class="offers__container">
           <h3>Год <span>4999</span></h3>
           <p>Безлимитный абонемент в тренажёрный зал</p>
-          <div>
+          <div class="offers__button-container">
             <a class="offers__details button-no-borders button-no-borders--primary" href="#">Подробнее</a>
           </div>
         </div>
@@ -395,18 +395,23 @@
         </picture>
       </article>
 
-      <article class="offers__card">
+      <article class="offers__card offers__card--secondary">
         <h3>Месяц бесплатно</h3>
         <p>Приведи друга, получи абонемент в подарок</p>
+
+        <div class="offers__button-container">
         <a class="offers__details button-no-borders button-no-borders--secondary" href="#">Подробнее</a>
+      </div>
       </article>
 
-      <article class="offers__card">
+      <article class="offers__card offers__card--secondary">
 
         <h3>Скидка 20%</h3>
         <p>Корпоративный фитнес с командой</p>
 
+        <div class="offers__button-container">
         <a class="offers__details button-no-borders button-no-borders--secondary" href="#">Подробнее</a>
+      </div>
       </article>
     </section>
 
