feat: add button states in FAQ block

--- a/source/index.html
+++ b/source/index.html
@@ -429,7 +429,7 @@
           <div class="faq__tab-pane faq__tab-pane--active" id="tab1">
             <div class="faq__tab-item faq__tab-item--active">
               <h3>Как стать членом фитнес-центра?</h3>
-              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
                   вопрос</span></button>
               <p>При первом посещении и покупке абонемента, необходимо заполнить анкету и подписать договор. При покупке
                 абонемента онлайн, анкета также заполняется онлайн и договор придёт вам на почту.
@@ -438,7 +438,7 @@
 
             <div class="faq__tab-item">
               <h3>Где можно посмотреть расписание?</h3>
-              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
                   вопрос</span></button>
               <p>Вы можете ознакомиться с расписание на стойке информации, на нашем официальном
                 сайте. Так же есть возможность оформить подписку на наши новости и получать расписание и обновления на
@@ -448,7 +448,7 @@
 
             <div class="faq__tab-item">
               <h3>Есть кулеры в центре? Предоставляются полотенца?</h3>
-              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
                   вопрос</span></button>
               <p>В центре есть несколько кулеров. Полотенца предоставляются и входят в стоимость
                 абонемента.
@@ -457,7 +457,7 @@
 
             <div class="faq__tab-item">
               <h3>Сколько тренеров работает в клубе и какова их квалификация?</h3>
-              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
                   вопрос</span></button>
               <p>В нашем центре работает 15 тренеров, которые специализируются на разных направлениях. Все тренеры
                 сертифицированы, проходят регулярное обучение.</p>
@@ -467,7 +467,7 @@
           <div class="faq__tab-pane" id="tab2">
             <div class="faq__tab-item faq__tab-item--active">
               <h3>Занятия с тренером входят в абонемент?</h3>
-              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
                   вопрос</span></button>
               <p>При посещении тренажерного зала вам необходимо оплатить занятия с тренером
                 отдельно.
@@ -478,21 +478,21 @@
 
             <div class="faq__tab-item">
               <h3>Можно ли заморозить абонемент?</h3>
-              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
                   вопрос</span></button>
               <p>Да, опция заморозки доступна и зависит от типа приоретенного абонемента.</p>
             </div>
 
             <div class="faq__tab-item">
               <h3>Есть ли лимит по посещениям тренажерного зала и групповых занятий?</h3>
-              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
                   вопрос</span></button>
               <p>Лимит отсутствует. Занимайтесь на здоровье!</p>
             </div>
 
             <div class="faq__tab-item">
               <h3>Что такое семейный доступ и доступ для друзей?</h3>
-              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
                   вопрос</span></button>
               <p>ааааа</p>
             </div>
@@ -501,7 +501,7 @@
           <div class="faq__tab-pane" id="tab3">
             <div class="faq__tab-item faq__tab-item--active">
               <h3>Предлагает ли клуб услуги по консультированию по вопросам питания?</h3>
-              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
                   вопрос</span></button>
               <p>Да. Вы можете обратиться как к своему тренеру, так и к нашему нутрициологу.
                 Специалист уточнит ваши данные, цели и предложит программу питания.</p>
@@ -509,7 +509,7 @@
 
             <div class="faq__tab-item">
               <h3>Проводятся ли в клубе какие-либо мероприятия  или соревнования?</h3>
-              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
                   вопрос</span></button>
               <p>Да. Вся информация доступна на сайте, также можно узнать о проводимых мероприятиях у менеджера при
                 входе в фитнес-зал.</p>
@@ -517,14 +517,14 @@
 
             <div class="faq__tab-item">
               <h3>Можно ли приобрести в центре спортивное питание?</h3>
-              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
                   вопрос</span></button>
               <p>Да. В Центре работает магазин спортивного питания. Находится на 1 этаже при входе.</p>
             </div>
 
             <div class="faq__tab-item">
               <h3>Есть ли в центре детская комната?</h3>
-              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
                   вопрос</span></button>
               <p>Да.</p>
             </div>
@@ -533,7 +533,7 @@
           <div class="faq__tab-pane" id="tab4">
             <div class="faq__tab-item faq__tab-item--active">
               <h3>Есть в фитнес-центре дресс-код?</h3>
-              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
                   вопрос</span></button>
               <p>Для тренировок необходимо иметь предназначенную для этого закрытую спортивную обувь
                 и
@@ -544,21 +544,21 @@
 
             <div class="faq__tab-item">
               <h3>Можно ли приводить с собой детей на тренировки?</h3>
-              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
                   вопрос</span></button>
               <p>Можно приводить детей только на специальные занятия, которые проводятся совместно с детьми.</p>
             </div>
 
             <div class="faq__tab-item">
               <h3>Какие дополнительные правила посещения центра?</h3>
-              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
                   вопрос</span></button>
               <p>аллал</p>
             </div>
 
             <div class="faq__tab-item">
               <h3>Нужна ли медицинская справка для посещения залов и бассейна?</h3>
-              <button type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
                   вопрос</span></button>
               <p>Для посещения зала справка не нужна, а для посещения бассейна - обязательна.</p>
             </div>
