--- a/source/index.html
+++ b/source/index.html
@@ -315,9 +315,11 @@
         </div>
       </div>
 
-      <div class="juri__buttons-container">
-        <div class="juri__button juri__button--prev swiper-button-prev"></div>
-        <div class="juri__button juri__button--next swiper-button-next"></div>
+      <div class="juri__buttons-container arrows">
+        <button class="juri__button juri__button--prev arrows__button arrows__button--prev swiper-button-prev" type="button"
+          aria-label="Кнопка переключения предыдущего слайда"></button>
+        <button class="juri__button juri__button--next arrows__button arrows__button--next swiper-button-next" type="button"
+          aria-label="Кнопка переключения следующего слайда"></button>
       </div>
     </section>
 
@@ -400,8 +402,8 @@
         <p>Приведи друга, получи абонемент в подарок</p>
 
         <div class="offers__button-container">
-        <a class="offers__details button-no-borders button-no-borders--secondary" href="#">Подробнее</a>
-      </div>
+          <a class="offers__details button-no-borders button-no-borders--secondary" href="#">Подробнее</a>
+        </div>
       </article>
 
       <article class="offers__card offers__card--secondary">
@@ -410,8 +412,8 @@
         <p>Корпоративный фитнес с командой</p>
 
         <div class="offers__button-container">
-        <a class="offers__details button-no-borders button-no-borders--secondary" href="#">Подробнее</a>
-      </div>
+          <a class="offers__details button-no-borders button-no-borders--secondary" href="#">Подробнее</a>
+        </div>
       </article>
     </section>
 
@@ -429,7 +431,8 @@
           <div class="faq__tab-pane faq__tab-pane--active" id="tab1">
             <div class="faq__tab-item faq__tab-item--active">
               <h3>Как стать членом фитнес-центра?</h3>
-              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия
+                  ответа на
                   вопрос</span></button>
               <p>При первом посещении и покупке абонемента, необходимо заполнить анкету и подписать договор. При покупке
                 абонемента онлайн, анкета также заполняется онлайн и договор придёт вам на почту.
@@ -438,7 +441,8 @@
 
             <div class="faq__tab-item">
               <h3>Где можно посмотреть расписание?</h3>
-              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия
+                  ответа на
                   вопрос</span></button>
               <p>Вы можете ознакомиться с расписание на стойке информации, на нашем официальном
                 сайте. Так же есть возможность оформить подписку на наши новости и получать расписание и обновления на
@@ -448,7 +452,8 @@
 
             <div class="faq__tab-item">
               <h3>Есть кулеры в центре? Предоставляются полотенца?</h3>
-              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия
+                  ответа на
                   вопрос</span></button>
               <p>В центре есть несколько кулеров. Полотенца предоставляются и входят в стоимость
                 абонемента.
@@ -457,7 +462,8 @@
 
             <div class="faq__tab-item">
               <h3>Сколько тренеров работает в клубе и какова их квалификация?</h3>
-              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия
+                  ответа на
                   вопрос</span></button>
               <p>В нашем центре работает 15 тренеров, которые специализируются на разных направлениях. Все тренеры
                 сертифицированы, проходят регулярное обучение.</p>
@@ -467,7 +473,8 @@
           <div class="faq__tab-pane" id="tab2">
             <div class="faq__tab-item faq__tab-item--active">
               <h3>Занятия с тренером входят в абонемент?</h3>
-              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия
+                  ответа на
                   вопрос</span></button>
               <p>При посещении тренажерного зала вам необходимо оплатить занятия с тренером
                 отдельно.
@@ -478,21 +485,24 @@
 
             <div class="faq__tab-item">
               <h3>Можно ли заморозить абонемент?</h3>
-              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия
+                  ответа на
                   вопрос</span></button>
               <p>Да, опция заморозки доступна и зависит от типа приоретенного абонемента.</p>
             </div>
 
             <div class="faq__tab-item">
               <h3>Есть ли лимит по посещениям тренажерного зала и групповых занятий?</h3>
-              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия
+                  ответа на
                   вопрос</span></button>
               <p>Лимит отсутствует. Занимайтесь на здоровье!</p>
             </div>
 
             <div class="faq__tab-item">
               <h3>Что такое семейный доступ и доступ для друзей?</h3>
-              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия
+                  ответа на
                   вопрос</span></button>
               <p>ааааа</p>
             </div>
@@ -501,7 +511,8 @@
           <div class="faq__tab-pane" id="tab3">
             <div class="faq__tab-item faq__tab-item--active">
               <h3>Предлагает ли клуб услуги по консультированию по вопросам питания?</h3>
-              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия
+                  ответа на
                   вопрос</span></button>
               <p>Да. Вы можете обратиться как к своему тренеру, так и к нашему нутрициологу.
                 Специалист уточнит ваши данные, цели и предложит программу питания.</p>
@@ -509,7 +520,8 @@
 
             <div class="faq__tab-item">
               <h3>Проводятся ли в клубе какие-либо мероприятия  или соревнования?</h3>
-              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия
+                  ответа на
                   вопрос</span></button>
               <p>Да. Вся информация доступна на сайте, также можно узнать о проводимых мероприятиях у менеджера при
                 входе в фитнес-зал.</p>
@@ -517,14 +529,16 @@
 
             <div class="faq__tab-item">
               <h3>Можно ли приобрести в центре спортивное питание?</h3>
-              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия
+                  ответа на
                   вопрос</span></button>
               <p>Да. В Центре работает магазин спортивного питания. Находится на 1 этаже при входе.</p>
             </div>
 
             <div class="faq__tab-item">
               <h3>Есть ли в центре детская комната?</h3>
-              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия
+                  ответа на
                   вопрос</span></button>
               <p>Да.</p>
             </div>
@@ -533,7 +547,8 @@
           <div class="faq__tab-pane" id="tab4">
             <div class="faq__tab-item faq__tab-item--active">
               <h3>Есть в фитнес-центре дресс-код?</h3>
-              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия
+                  ответа на
                   вопрос</span></button>
               <p>Для тренировок необходимо иметь предназначенную для этого закрытую спортивную обувь
                 и
@@ -544,21 +559,24 @@
 
             <div class="faq__tab-item">
               <h3>Можно ли приводить с собой детей на тренировки?</h3>
-              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия
+                  ответа на
                   вопрос</span></button>
               <p>Можно приводить детей только на специальные занятия, которые проводятся совместно с детьми.</p>
             </div>
 
             <div class="faq__tab-item">
               <h3>Какие дополнительные правила посещения центра?</h3>
-              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия
+                  ответа на
                   вопрос</span></button>
               <p>аллал</p>
             </div>
 
             <div class="faq__tab-item">
               <h3>Нужна ли медицинская справка для посещения залов и бассейна?</h3>
-              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия ответа на
+              <button class="faq__open-button" type="button"><span class="visually-hidden">Кнопка раскрытия/ закрытия
+                  ответа на
                   вопрос</span></button>
               <p>Для посещения зала справка не нужна, а для посещения бассейна - обязательна.</p>
             </div>
@@ -618,12 +636,11 @@
         </div>
       </div>
 
-      <div class="reviews__buttons-container">
-        <button class="reviews__button reviews__button--prev swiper-button-prev" type="button"
-          aria-label="Посмотреть предыдущий слайд">
-          <span class="visually-hidden">Назад</span></button>
-        <button class="reviews__button reviews__button--next swiper-button-next" type="button"
-          aria-label="Посмотреть следующий слайд"><span class="visually-hidden">Вперед</span></button>
+      <div class="reviews__buttons-container arrows">
+        <button class="reviews__button reviews__button--prev arrows__button arrows__button--prev swiper-button-prev" type="button"
+          aria-label="Посмотреть предыдущий слайд"></button>
+        <button class="reviews__button reviews__button--next arrows__button arrows__button--next swiper-button-next" type="button"
+          aria-label="Посмотреть следующий слайд"></button>
       </div>
     </section>
 
@@ -633,85 +650,86 @@
           <h2 class="registration__title">Бесплатное занятие</h2>
 
           <div class="registration__inputs-container">
-          <input class="registration__input" type="text" id="name" name="name" placeholder="Имя" required>
-          <label class="registration__label" for="name">Имя</label>
+            <input class="registration__input" type="text" id="name" name="name" placeholder="Имя" required>
+            <label class="registration__label" for="name">Имя</label>
 
-          <input class="registration__input" type="tel" id="phone" name="phone" placeholder="Телефон" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
-          <label class="registration__label" for="phone">Телефон</label>
-        </div>
+            <input class="registration__input" type="tel" id="phone" name="phone" placeholder="Телефон"
+              pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
+            <label class="registration__label" for="phone">Телефон</label>
+          </div>
 
           <button class="registration__form-send button button--primary" type="submit">Отправить</button>
         </form>
       </div>
 
-        <section class="registration__contacts contacts">
-          <h2 class="contacts__title">Контакты</h2>
-          <ul class="contacts__list">
-            <li class="contacts__item">
-              <h3 class="contacts__item-title">Адрес:</h3>
-              <address class="contacts__item-description">г. Омск, ул. 60 лет Октября, 7</address>
-            </li>
-            <li class="contacts__item">
-              <h3 class="contacts__item-title">График работы:</h3>
-              <p class="contacts__item-description">Пн-Вс: с 8:00 до 22:00</p>
-            </li>
-            <li class="contacts__item">
-              <h3 class="contacts__item-title">Телефон:</h3>
-              <a class="contacts__item-description" href="tel:+78005555555">8 800 555-55-55</a>
-            </li>
-            <li class="contacts__item">
-              <h3 class="contacts__item-title">Email:</h3>
-              <a class="contacts__item-description" href="mailto:oмск@supergym.ru">oмск@supergym.ru</a>
-            </li>
-          </ul>
-        </section>
+      <section class="registration__contacts contacts">
+        <h2 class="contacts__title">Контакты</h2>
+        <ul class="contacts__list">
+          <li class="contacts__item">
+            <h3 class="contacts__item-title">Адрес:</h3>
+            <address class="contacts__item-description">г. Омск, ул. 60 лет Октября, 7</address>
+          </li>
+          <li class="contacts__item">
+            <h3 class="contacts__item-title">График работы:</h3>
+            <p class="contacts__item-description">Пн-Вс: с 8:00 до 22:00</p>
+          </li>
+          <li class="contacts__item">
+            <h3 class="contacts__item-title">Телефон:</h3>
+            <a class="contacts__item-description" href="tel:+78005555555">8 800 555-55-55</a>
+          </li>
+          <li class="contacts__item">
+            <h3 class="contacts__item-title">Email:</h3>
+            <a class="contacts__item-description" href="mailto:oмск@supergym.ru">oмск@supergym.ru</a>
+          </li>
+        </ul>
+      </section>
     </section>
   </main>
 
   <footer class="footer" data-test="footer">
     <div class="footer__main-container">
-    <picture>
-      <source media="(min-width: 1366px)" width="130" height="26" type="image/svg+xml"
-        srcset="img/logo/supergym-logo-desktop.svg">
-      <source media="(min-width: 768px)" width="110" height="22" type="image/svg+xml"
-        srcset="img/logo/supergym-logo-tablet.svg">
-      <img class="footer__logo-icon logo" src="img/logo/supergym-logo-mobile.svg" width="100" height="20"
-        alt="Логотип SUPERGYM">
-    </picture>
+      <picture>
+        <source media="(min-width: 1366px)" width="130" height="26" type="image/svg+xml"
+          srcset="img/logo/supergym-logo-desktop.svg">
+        <source media="(min-width: 768px)" width="110" height="22" type="image/svg+xml"
+          srcset="img/logo/supergym-logo-tablet.svg">
+        <img class="footer__logo-icon logo" src="img/logo/supergym-logo-mobile.svg" width="100" height="20"
+          alt="Логотип SUPERGYM">
+      </picture>
 
-    <ul class="footer__services-list">
-      <li class="footer__services-item">
-        <a class="footer__services-item-link" href="#">Услуги</a>
-      </li>
-      <li class="footer__services-item">
-        <a class="footer__services-item-link" href="#">Абонементы</a>
-      </li>
-      <li class="footer__services-item">
-        <a class="footer__services-item-link" href="#">Акции</a>
-      </li>
-      <li class="footer__services-item">
-        <a class="footer__services-item-link" href="#">Тренеры</a>
-      </li>
-      <li class="footer__services-item">
-        <a class="footer__services-item-link" href="#">Расписание</a>
-      </li>
-    </ul>
+      <ul class="footer__services-list">
+        <li class="footer__services-item">
+          <a class="footer__services-item-link" href="#">Услуги</a>
+        </li>
+        <li class="footer__services-item">
+          <a class="footer__services-item-link" href="#">Абонементы</a>
+        </li>
+        <li class="footer__services-item">
+          <a class="footer__services-item-link" href="#">Акции</a>
+        </li>
+        <li class="footer__services-item">
+          <a class="footer__services-item-link" href="#">Тренеры</a>
+        </li>
+        <li class="footer__services-item">
+          <a class="footer__services-item-link" href="#">Расписание</a>
+        </li>
+      </ul>
 
-    <ul class="footer__social-list social-list">
-      <li class="social-list__item">
-        <a class="social-list__link social-list__link--vk" href="https://vk.com"><span class="visually-hidden">Мы во
-            Vkontakte</span></a>
-      </li>
-      <li class="social-list__item">
-        <a class="social-list__link social-list__link--ok" href="https://ok.ru"><span class="visually-hidden">Мы в
-            Одноклассниках</span></a>
-      </li>
-      <li class="social-list__item">
-        <a class="social-list__link social-list__link--reddit" href="https://www.reddit.com/"><span
-            class="visually-hidden">Мы в Reddit</span></a>
-      </li>
-    </ul>
-  </div>
+      <ul class="footer__social-list social-list">
+        <li class="social-list__item">
+          <a class="social-list__link social-list__link--vk" href="https://vk.com"><span class="visually-hidden">Мы во
+              Vkontakte</span></a>
+        </li>
+        <li class="social-list__item">
+          <a class="social-list__link social-list__link--ok" href="https://ok.ru"><span class="visually-hidden">Мы в
+              Одноклассниках</span></a>
+        </li>
+        <li class="social-list__item">
+          <a class="social-list__link social-list__link--reddit" href="https://www.reddit.com/"><span
+              class="visually-hidden">Мы в Reddit</span></a>
+        </li>
+      </ul>
+    </div>
   </footer>
 
   <script src="js/vendor/swiper-bundle.js"></script>
