--- a/source/index.html
+++ b/source/index.html
@@ -18,7 +18,7 @@
               srcset="img/logo/supergym-logo-desktop.svg">
             <source media="(min-width: 768px)" width="110" height="22" type="image/svg+xml"
               srcset="img/logo/supergym-logo-tablet.svg">
-            <img class="header__logo-icon logo" src="img/logo/supergym-logo-mobile.svg" width="100" height="20"
+            <img class="header__logo-icon" src="img/logo/supergym-logo-mobile.svg" width="100" height="20"
               alt="Логотип SUPERGYM">
           </picture>
           <a class="header__phone-link" href="tel:+78005555555">8 800 555-55-55</a>
@@ -693,7 +693,7 @@
           srcset="img/logo/supergym-logo-desktop.svg">
         <source media="(min-width: 768px)" width="110" height="22" type="image/svg+xml"
           srcset="img/logo/supergym-logo-tablet.svg">
-        <img class="footer__logo-icon logo" src="img/logo/supergym-logo-mobile.svg" width="100" height="20"
+        <img class="footer__logo-icon" src="img/logo/supergym-logo-mobile.svg" width="100" height="20"
           alt="Логотип SUPERGYM">
       </picture>
 
