feat: add button states in price block

--- a/source/index.html
+++ b/source/index.html
@@ -92,9 +92,15 @@
         <h2 class="price__title">Абонементы</h2>
         <div class="price__tabs">
           <ul class="price__tab-list">
-            <li class="price__tab-item price__tab-item--current">1 месяц</li>
-            <li class="price__tab-item">6 месяцев</li>
-            <li class="price__tab-item">12 месяцев</li>
+            <li class="price__tab-item price__tab-item--current">
+              <button class="price__tab-button" type="button">1 месяц</button>
+            </li>
+            <li class="price__tab-item">
+              <button class="price__tab-button" type="button">6 месяцев</button>
+            </li>
+            <li class="price__tab-item">
+              <button class="price__tab-button" type="button">12 месяцев</button>
+             </li>
           </ul>
           <div class="price__tab-content">
             <div class="price__tab-content-item">
