fix: make changes after lint check

--- a/source/index.html
+++ b/source/index.html
@@ -81,8 +81,8 @@
       </picture>
 
       <div class="about__video-container">
-        <iframe class="about__video" width="100%" height="100%" title="Видео о тренажерном зале"
-          src="https://www.youtube.com/embed/9TZXsZItgdw" frameborder="0" allowfullscreen></iframe>
+        <iframe class="about__video" title="Видео о тренажерном зале"
+          src="https://www.youtube.com/embed/9TZXsZItgdw" allowfullscreen></iframe>
         <button class="about__play" type="button"><span class="visually-hidden">Воспроизвести</span></button>
       </div>
     </section>
