fix: make changes after Pixel Perfect check (desktop)

--- a/source/index.html
+++ b/source/index.html
@@ -81,8 +81,8 @@
       </picture>
 
       <div class="about__video-container">
-        <iframe class="about__video" title="Видео о тренажерном зале"
-          src="https://www.youtube.com/embed/9TZXsZItgdw" allowfullscreen></iframe>
+        <iframe class="about__video" title="Видео о тренажерном зале" src="https://www.youtube.com/embed/9TZXsZItgdw"
+          allowfullscreen></iframe>
         <button class="about__play" type="button"><span class="visually-hidden">Воспроизвести</span></button>
       </div>
     </section>
@@ -100,7 +100,7 @@
             </li>
             <li class="price__tab-item">
               <button class="price__tab-button" type="button">12 месяцев</button>
-             </li>
+            </li>
           </ul>
           <div class="price__tab-content">
             <div class="price__tab-content-item">
@@ -322,10 +322,10 @@
       </div>
 
       <div class="juri__buttons-container arrows">
-        <button class="juri__button juri__button--prev arrows__button arrows__button--prev swiper-button-prev" type="button"
-          aria-label="Кнопка переключения предыдущего слайда"></button>
-        <button class="juri__button juri__button--next arrows__button arrows__button--next swiper-button-next" type="button"
-          aria-label="Кнопка переключения следующего слайда"></button>
+        <button class="juri__button juri__button--prev arrows__button arrows__button--prev swiper-button-prev"
+          type="button" aria-label="Кнопка переключения предыдущего слайда"></button>
+        <button class="juri__button juri__button--next arrows__button arrows__button--next swiper-button-next"
+          type="button" aria-label="Кнопка переключения следующего слайда"></button>
       </div>
     </section>
 
@@ -643,10 +643,10 @@
       </div>
 
       <div class="reviews__buttons-container arrows">
-        <button class="reviews__button reviews__button--prev arrows__button arrows__button--prev swiper-button-prev" type="button"
-          aria-label="Посмотреть предыдущий слайд"></button>
-        <button class="reviews__button reviews__button--next arrows__button arrows__button--next swiper-button-next" type="button"
-          aria-label="Посмотреть следующий слайд"></button>
+        <button class="reviews__button reviews__button--prev arrows__button arrows__button--prev swiper-button-prev"
+          type="button" aria-label="Посмотреть предыдущий слайд"></button>
+        <button class="reviews__button reviews__button--next arrows__button arrows__button--next swiper-button-next"
+          type="button" aria-label="Посмотреть следующий слайд"></button>
       </div>
     </section>
 
