--- a/source/index.html
+++ b/source/index.html
@@ -333,7 +333,7 @@
       <div class="features__main-container">
         <h2 class="features__title">Наши преимущества</h2>
         <ul class="features__list">
-          <li>
+          <li class="features__item">
             <p><span>900</span> <span>кв/м</span></p>
             <div>
               <h3>Площадь</h3>
@@ -341,7 +341,7 @@
             </div>
           </li>
 
-          <li>
+          <li class="features__item">
             <p><span>70</span> <span>машин</span></p>
             <div>
               <h3>Собственная парковка</h3>
@@ -349,7 +349,7 @@
             </div>
           </li>
 
-          <li>
+          <li class="features__item features__item--different">
             <p><span>100</span> <span>Тренажёров</span></p>
             <div>
               <h3 class="visually-hidden">Много тренажеров</h3>
@@ -357,7 +357,7 @@
             </div>
           </li>
 
-          <li>
+          <li class="features__item">
             <p><span>350</span> <span>мест</span></p>
             <div>
               <h3>Комфорт</h3>
@@ -365,7 +365,7 @@
             </div>
           </li>
 
-          <li>
+          <li class="features__item">
             <p><span>5+</span><span>лет</span></p>
             <div>
               <h3>Тренерский опыт</h3>
