fix: make changes after testing the project

--- a/source/index.html
+++ b/source/index.html
@@ -54,7 +54,8 @@
 
     <section class="about" data-test="about">
       <div class="about__main-container">
-        <h2 class="about__title">Тренажерный зал</h2>
+      <div class="about__text-container">
+        <h2 class="about__title">Тренажёрный зал</h2>
         <p class="about__text">Просторный зал площадью 900 кв/м</p>
         <div class="about__description-container">
           <p>Supergym – самый большой фитнес центр за Уралом и идеальное место для укрепления
@@ -85,6 +86,7 @@
           allowfullscreen></iframe>
         <button class="about__play" type="button"><span class="visually-hidden">Воспроизвести</span></button>
       </div>
+    </div>
     </section>
 
     <section class="price" data-test="price">
